# cudackpt

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  SECURITY.md  go.mod
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md
.github/workflows/: ci.yml  docker-prod.yml  e2e-selfhosted.yml  nightly-gpu.yml  release.yml
cmd/cudackpt/: completion.go  completion_test.go  main.go  serve_test.go
deploy/: cudackpt-agent.service  cudackpt-run.service  cudackpt.conf.example  cudackpt.socket  cudackpt@.service
docs/: CLI.md  CONFIG.md  OPERATIONS.md  RELEASE_CHECKLIST.md  RUNNER.md
examples/vectoradd-checkpoint/: README.md  run.sh
internal/ckpterr/: err.go
internal/version/: version.go
pkg/agent/: agent.go  agent_test.go
pkg/bench/: bench.go  bench_test.go
pkg/config/: config.go  config_test.go  load_test.go
pkg/control/: drift.go  drift_test.go  failure_test.go  inspect.go  orchestrator.go  orchestrator_integration_test.go  orchestrator_test.go  preflight.go  promote.go  promote_test.go  queue.go  (+15 more)
scripts/: bench.sh  build-deb.sh  check_env.sh  control_commits.sh  diag.sh  docker_prod_smoke.sh  gc_images.sh  image_commits.sh  install-hooks.sh  install-systemd.sh  ops_commits.sh  promote_image.sh  publish.sh  reorg_commits.sh  run_all.sh  run_checkpoint.sh  run_cublas_smoke.sh  run_docker_e2e.sh  run_e2e.sh  run_e2e_cublas.sh  run_e2e_fast.sh  run_e2e_pipeline.sh  run_restore_only.sh  run_shim_smoke.sh  setup_selfhosted_runner.sh  shim_commits.sh
shim/: app_hooks.c  ckpt_ops.h  coalesce.cpp  coalesce.hpp  cuda_check.h  errcode.c  errcode.h  interpose.c  ipc.c  log.h  module_io.cpp  module_io.hpp  pinned_pool.cpp  pinned_pool.hpp  quiesce.cpp  quiesce.hpp  restore.cu  snapshot.cu  tracker.cpp  tracker.hpp
(+46 files in other folders)
